...

function showUploadSourcePicker(adapter: UploadFilesAdapter): Promise<UploadSource | null> {
  if (adapter.os === "ios") {
    return new Promise((resolve) => {
      adapter.showActionSheet(
        {
          options: ["Fotos", "Filer", "Annuller"],
          cancelButtonIndex: 2,
        },
        (buttonIndex) => {
          if (buttonIndex === 0) {
            resolve("gallery");
            return;
...
