...

          <NativeTabs.Trigger
            name="wishlist"
            disableAutomaticContentInsets
            contentStyle={tabContentStyle}
          >
            <NativeTabs.Trigger.Label>Ønsker</NativeTabs.Trigger.Label>
            <NativeTabs.Trigger.Icon renderingMode="template" src={wishlistIcon} />
          </NativeTabs.Trigger>

          <NativeTabs.Trigger
            name="profile"
            disableAutomaticContentInsets
...
